--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babylon": "^6.8.0"
+    "babylon": "^6.8.0",
+    "eslint": "^2.10.2"
   }
 }
