--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,4 +6,5 @@
     doctype: 2
   settings:
     modelsDir: './node_modules/ms_config/swagger'
+    adapters: ['snake_case']
     nestedSubDir: '/v1/definitions'
