--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.1",
     "mocha": "^2.5.2"
   }
 }
