--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,17 @@
 ---
   env:
     node: true
+    es6: true
   rules:
     eol-last: 0
     no-trailing-spaces: 0
     func-names: 0
     comma-dangle: 0
     no-param-reassign: 0
+    no-use-before-define: 0
     global-require: 0
     no-underscore-dangle: 0
+    typelint: 2
   extends: 'airbnb-base/legacy'
   settings:
     typelint:
