--- a/lib/models/movie.yml
+++ b/lib/models/movie.yml
@@ -1,3 +1,12 @@
 properties:
-  director: string
+  creators:
+    type: object
+    properties:
+      director: string
+      screenwriter: string
+      producer: string
+    actors:
+      type: array
+      items:
+        type: string
   title: string
