--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,8 @@
     one-var: 0
     one-var-declaration-per-line: 0
     max-len: 0
+    valid-jsdoc: 2
+    valid-typeof: 2
     typelint: 2
   extends: 'airbnb-base/legacy'
   settings:
