--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typelint",
   "version": "1.0.2",
+  "main": "lib/index",
   "description": "ESlint rule for optional typing in JavaScript, based on JSDoc",
   "keywords": [
     "jsdoc",
