--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-register": "^6.9.0",
     "eslint": "^2.10.2",
-    "js-yaml": "^3.6.1"
+    "js-yaml": "^3.6.1",
+    "lodash": "^4.13.1"
   },
   "devDependencies": {
     "eslint": "^2.11.1",
