--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-airbnb": "^9.0.1",
     "eslint-config-airbnb-base": "^3.0.1",
     "eslint-plugin-import": "^1.8.1",
-    "mocha": "^2.5.2"
+    "mocha": "^2.5.2",
+    "redux": "^3.5.2"
   }
 }
