--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-register": "^6.9.0",
+    "doctrine": "^1.2.2",
     "eslint": "^2.10.2",
     "js-yaml": "^3.6.1",
     "lodash": "^4.13.1"
