Fixes in doctrine implementation, integration tests included

--- a/models/settings.yml
+++ b/models/settings.yml
@@ -5,6 +5,7 @@ properties:
       json:
         type: 'object'
         proprties:
+          dir: 'string'
           adapters:
             type: 'array'
             items:
