--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "js typing"
   ],
   "scripts": {
-    "test": "./node_modules/.bin/mocha test/units/*"
+    "test": "./node_modules/.bin/mocha test/units/* test/code.js"
   },
   "author": "",
   "license": "ISC",
