--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,8 +18,7 @@ rules:
   one-var-declaration-per-line: 0
   max-len: 0
   valid-typeof: 2
-  typelint/composite: 2
-  typelint/primitive: 2
+  typelint: 2
 extends: 'airbnb-base/legacy'
 settings:
   typelint:
