Added swagger loader

--- a/models/settings.yml
+++ b/models/settings.yml
@@ -6,6 +6,7 @@ properties:
         type: 'object'
         proprties:
           dir: 'string'
+          swagger: 'string'
           adapters:
             type: 'array'
             items:
