--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.0.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-config-airbnb-base": "8.0.0",
     "eslint-plugin-import": "^1.8.1",
     "mocha": "^2.5.2",
     "redux": "^3.5.2"
